--- a/join.html
+++ b/join.html
@@ -1,24 +1,47 @@
 <html>
 
 <head>
-<h1><p align='center'>
-  Create a New Account
-  </p></h1>
+  <h1>
+    <p align='center'>
+      Create a New Account
+    </p>
+  </h1>
   <style>
-  body{
-    background-image:url(background.jpg);
-    background-repeat: no-repeat;
-     background-size:cover;
-  }
+    body {
+      background-image: url(background.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   </style>
 </head>
 
 <body>
-  <form name='fo' method='post'>
+  <form name='information' action='user.html' method='post'>
     ID:<input id='userid' name='id' type='text' pattern='^(a-z0-9_]){6, 50}$' /><br />
     PassWord:<input id='pwd' name='password' type='password' pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^*()_-+=[]{}~?:;`|/].{6,50}$)" /><br />
+    PassWord-Check:<input id='pwd' name='password' type='password' pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^*()_-+=[]{}~?:;`|/].{6,50}$)" /><br />
+    Nickname:<input type='text' id='username' /><br />
+    What is your job?<br />
+    student<input type='radio' name='job' value='student' />
+    office worker<input type='radio' name='job' value='office worker' />
+    official<input type='radio' name='job' value='official' />
+    freelancer<input type='radio' name='job' value='freelancer' />
+    other<input type='radio' name='job' value='other' />
     <input type='submit' value='submit' />
   </form>
+  <script type='text'>
+    var temp;
+
+  function input(){
+    var input = document.getElementById('input').value;
+    temp = input;
+  }
+
+  function output(){
+    document.getElementById('output').value = temp;
+  }
+</script>
+
 </body>
 
 </html>
