--- a/main.html
+++ b/main.html
@@ -7,25 +7,25 @@
     <p align="center">Welcome!! Let's post your story!</p>
   </h1 </head>
   <style>
-  body{
-    background-image:url(background.jpg);
-    background-repeat: no-repeat;
-    background-size:cover;
-  }
+    body {
+      background-image: url(background.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   </style>
 </head>
 
 <body>
-  <!-- 주석 -->
+  <!-- id와 password 받기 -->
   <form name='fo' method='post'>
     ID:<input id='userid' name='id' type='text' pattern='^(a-z0-9_]){6, 50}$' /><br />
     PassWord:<input id='pwd' name='password' type='password' pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^*()_-+=[]{}~?:;`|/].{6,50}$)" /><br />
     <input type='submit' value='submit' />
   </form><br />
-  <a href="c:\Users\p\OneDrive\바탕 화면\Web\join.html">New User? Please Join!</a><br /><br />
+  <a href="join.html">New User? Please Join!</a><br /><br />
   <ul>
     <li>
-      <a href="c:\Users\p\OneDrive\바탕 화면\Web\2.html">go to post</a>
+      <a href="2.html">go to post</a>
     </li>
   </ul>
 </body>
