--- a/join.html
+++ b/join.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>notic board</title>
   <h1>
     <p align='center'>
       Create a New Account
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-  <form name='information' action='user.html' method='post'>
+  <form name='information' action='main.html' method='post'>
     ID:<input id='userid' name='id' type='text' pattern='^(a-z0-9_]){6, 50}$' /><br />
     PassWord:<input id='pwd' name='password' type='password' pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^*()_-+=[]{}~?:;`|/].{6,50}$)" /><br />
     PassWord-Check:<input id='pwd' name='password' type='password' pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^*()_-+=[]{}~?:;`|/].{6,50}$)" /><br />
@@ -27,20 +28,8 @@
     official<input type='radio' name='job' value='official' />
     freelancer<input type='radio' name='job' value='freelancer' />
     other<input type='radio' name='job' value='other' />
-    <input type='submit' value='submit' />
+    <input type='submit' value='회원가입' />
   </form>
-  <script type='text'>
-    var temp;
-
-  function input(){
-    var input = document.getElementById('input').value;
-    temp = input;
-  }
-
-  function output(){
-    document.getElementById('output').value = temp;
-  }
-</script>
 
 </body>
 
