--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>blog</title>
+  <title>notic board</title>
   <h1>
     <p align="center">Welcome!! Let's post your story!</p>
   </h1 </head>
@@ -17,17 +17,13 @@
 
 <body>
   <!-- id와 password 받기 -->
-  <form name='fo' method='post'>
+  <form name='fo' action='login.html' method='post'>
     ID:<input id='userid' name='id' type='text' pattern='^(a-z0-9_]){6, 50}$' /><br />
     PassWord:<input id='pwd' name='password' type='password' pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^*()_-+=[]{}~?:;`|/].{6,50}$)" /><br />
-    <input type='submit' value='submit' />
+    <input type='submit' value='로그인' />
   </form><br />
   <a href="join.html">New User? Please Join!</a><br /><br />
-  <ul>
-    <li>
-      <a href="2.html">go to post</a>
-    </li>
-  </ul>
+
 </body>
 
 </html>
