--- a/JavaScript/3.html
+++ b/JavaScript/3.html
@@ -4,41 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>WEB1-JavaScript</title>
-  <script>
-    function LinksSetColor(color) {
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while (i < alist.length) {
-        alist[i].style.color = color;
-        i = i + 1;
-      }
-    }
-
-    function BodySetColor(color) {
-      document.querySelector('body').style.color = color;
-    }
-
-    function BodySetBackgroundColor(color) {
-      document.querySelector('body').style.backgroundColor = color;
-    }
-
-    function nightDayHandler(self) {
-      var target = document.querySelector('body');
-      if (self.value === 'night') {
-        BodySetBackgroundColor('black');
-        BodySetColor('white');
-        self.value = 'day';
-
-        LinksSetColor('powderblue');
-      } else {
-        BodySetBackgroundColor('white');
-        BodySetColor('black');
-        self.value = 'night';
-
-        LinksSetColor('blue');
-      }
-    }
-  </script>
+  <script src="colors.js"></script>
 </head>
 
 <body>
